-
Bug
-
Resolution: Done
-
P1: Critical
-
5.2.1
-
None
-
Android, Galaxy S4
-
30078eeee13b60af65deb14a6ac1d6deca53003c
Calling QCamera::unload() and then load() again fails. It seems unload() doesn't actually release the camera and the lock is still active after calling unload(). Trying to use the built-in camera app also fails after that.
For Gerrit Dashboard: QTBUG-36204 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
75586,1 | Android: fixes some issues with JCamera. | release | qt/qtmultimedia | Status: MERGED | +2 | 0 |